links style, reordering

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-  <h1> Hi, I'm Chris. </h1>
+  <header>
+    <h1>
+      Hi, I'm Chris.
+    </h1>
+  </header>
 
   <nav>
     <a href='https://github.com/chancock09'>Github</a>
