links open in new tab

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   </header>
 
   <nav>
-    <a href='https://github.com/chancock09'>Github</a>
-    <a href='https://www.linkedin.com/in/hancockc'>LinkedIn</a>
-    <a href='https://medium.com/@chancock09'>Medium</a>
-    <a href='https://www.facebook.com/chancock09'>Facebook</a>
+    <a target='_blank' href='https://github.com/chancock09'>Github</a>
+    <a target='_blank' href='https://www.linkedin.com/in/hancockc'>LinkedIn</a>
+    <a target='_blank' href='https://medium.com/@chancock09'>Medium</a>
+    <a target='_blank' href='https://www.facebook.com/chancock09'>Facebook</a>
   </nav>
 </body>
 </html>
