--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
   <meta name='author' content='Chris Hancock'>
 
   <link rel='stylesheet' href='styles/main.css'>
+  <link rel='shortcut icon' type='image/png' href='assets/favicon.png'>
 </head>
 
 <body>
   <header>
-    <h1>
-      Hi, I'm Chris.
-    </h1>
+    <h1> Hi, I'm Chris. </h1>
   </header>
 
   <nav>
