--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>Chris Hancock Make Websites</title>
+  <title>Chris Hancock Makes Websites</title>
 
   <meta name='description' content='My Site'>
   <meta name='author' content='Chris Hancock'>
@@ -28,8 +28,8 @@
   <nav>
     <a target='_blank' href='https://github.com/chancock09'>Github</a>
     <a target='_blank' href='https://www.linkedin.com/in/chancock09'>LinkedIn</a>
-    <a target='_blank' href='https://medium.com/@chancock09'>Medium</a>
     <a target='_blank' href='https://www.facebook.com/chancock09'>Facebook</a>
+    <a target='_blank' href='https://github.com/chancock09/resume/files/520574/resume.pdf'>Resume</a>
   </nav>
 </body>
 </html>
