ga and better meta description

--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 
 <html lang='en'>
 <head>
+  <title>Chris Hancock | Developer</title>
+
   <meta charset='utf-8'>
+  <meta name='description'
+        content='Chris builds beautiful websites from Brooklyn, NY'>
+  <meta name='author'
+        content='Chris Hancock'>
 
-  <title>Chris Hancock Makes Websites</title>
+  <link rel='stylesheet'
+        href='assets/index.css'>
+  <link rel='shortcut icon'
+        type='image/png'
+        href='assets/favicon.png'>
 
-  <meta name='description' content='My Site'>
-  <meta name='author' content='Chris Hancock'>
-
+  <script src="ga.js"></script>
   <script src='assets/index.js'></script>
-  <link rel='stylesheet' href='assets/index.css'>
-  <link rel='shortcut icon' type='image/png' href='assets/favicon.png'>
 </head>
 
 <body>
