--- a/index.html
+++ b/index.html
@@ -16,7 +16,27 @@
         type='image/png'
         href='assets/favicon.png'>
 
-
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "WebSite",
+      "name": "Chris Hancock | Developer",
+      "alternateName": "Chris Hancock's Website",
+      "url": "chancock.com"
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Person",
+      "name": "Chris Hancock",
+      "additionalName": "Chris",
+      "jobTitle": "Product Engineer | Software Developer",
+      "affiliation": "Handy",
+      "telephone": "(708) 942-4747",
+      "url": "chancock.com"
+    }
+  </script>
   <script src="assets/ga.js"></script>
   <script src='assets/index.js'></script>
 </head>
