--- a/index.html
+++ b/index.html
@@ -19,15 +19,6 @@
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
-      "@type": "WebSite",
-      "name": "Chris Hancock | Developer",
-      "alternateName": "Chris Hancock's Website",
-      "url": "chancock.com"
-    }
-  </script>
-  <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
       "@type": "Person",
       "name": "Chris Hancock",
       "additionalName": "Chris",
@@ -56,7 +47,7 @@
   <nav>
     <a target='_blank' href='https://github.com/chancock09'>Github</a>
     <a target='_blank' href='https://www.linkedin.com/in/chancock09'>LinkedIn</a>
-    <a target='_blank' href='https://www.facebook.com/chancock09'>Facebook</a>
+    <a target='_blank' href='https://medium.com/@chancock09'>Medium</a>
     <a target='_blank' href='https://github.com/chancock09/resume/files/520574/resume.pdf'>Resume</a>
   </nav>
 </body>
