--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         content='Chris Hancock'>
 
   <link rel='stylesheet'
-        href='assets/index.css'>
+        href='assets/styles/index.css'>
   <link rel='shortcut icon'
         type='image/png'
-        href='assets/favicon.png'>
+        href='assets/images/favicon.png'>
 
   <script type="application/ld+json">
     {
@@ -29,8 +29,8 @@
     }
   </script>
 
-  <script src="assets/ga.js"></script>
-  <script src='assets/index.js'></script>
+  <script src="assets/scripts/ga.js"></script>
+  <script src='assets/scripts/index.js'></script>
 </head>
 
 <body>
@@ -41,7 +41,7 @@
   </header>
 
   <img id='me'
-       src='assets/me.jpg'
+       src='assets/images/me.jpg'
        class='img--hidden'>
 
   <nav>
