--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
         content='Chris builds beautiful websites from Brooklyn, NY'>
   <meta name='author'
         content='Chris Hancock'>
-
-  <link rel='stylesheet'
-        href='assets/styles/index.css'>
-  <link rel='shortcut icon'
-        type='image/png'
-        href='assets/images/favicon.png'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script type="application/ld+json">
     {
@@ -28,6 +23,12 @@
       "url": "chancock.com"
     }
   </script>
+
+  <link rel='stylesheet'
+        href='assets/styles/index.css'>
+  <link rel='shortcut icon'
+        type='image/png'
+        href='assets/images/favicon.png'>
 
   <script src="assets/scripts/ga.js"></script>
   <script src='assets/scripts/index.js'></script>
@@ -45,10 +46,10 @@
        class='img--hidden'>
 
   <nav>
-    <a target='_blank' href='https://github.com/chancock09'>Github</a>
-    <a target='_blank' href='https://www.linkedin.com/in/chancock09'>LinkedIn</a>
-    <a target='_blank' href='https://medium.com/@chancock09'>Medium</a>
-    <a target='_blank' href='https://github.com/chancock09/resume/files/520574/resume.pdf'>Resume</a>
+    <a target='_blank' href='https://github.com/chancock09' rel="noopener">Github</a>
+    <a target='_blank' href='https://www.linkedin.com/in/chancock09' rel="noopener">LinkedIn</a>
+    <a target='_blank' href='https://medium.com/@chancock09' rel="noopener">Medium</a>
+    <a target='_blank' href='https://github.com/chancock09/resume/files/520574/resume.pdf' rel="noopener">Resume</a>
   </nav>
 </body>
 </html>
