slightly better spacing

--- a/index.html
+++ b/index.html
@@ -2,24 +2,22 @@
 layout: default
 ---
 
-<header>
+<article>
   <h1>
-    Hi, I'm <a onclick='toggleImage()'>Chris</a>.
+    Hi, I'm <a onclick="toggleImage()">Chris</a>.
   </h1>
-</header>
 
-<img id='me'
-     src='assets/images/me.jpg'
-     class='img--hidden'>
+  <img id="me"
+       src="assets/images/me.jpg"
+       class="img--hidden">
 
-<nav>
-  <a href="/about">
-    About
-  </a>
-  <span>|</span>
-  <a href='https://medium.com/@chancock09'
-     target='_blank'
-     rel="noopener">
-    Blog
-  </a>
-</nav>
+  <nav>
+    <a href="/about">
+      About
+    </a>
+    <span> | </span>
+    <a href="/posts">
+      Posts
+    </a>
+  </nav>
+</article>
