--- a/index.html
+++ b/index.html
@@ -2,22 +2,35 @@
 layout: default
 ---
 
-<article>
+<article class="centered">
   <h1>
-    Hi, I'm <a onclick="toggleImage()">Chris</a>.
+    Hi, I'm <a onclick="toggleImage()" class="nav-link nav-link--main">Chris Hancock</a>.
   </h1>
 
   <img id="me"
        src="assets/images/me.jpg"
        class="img--hidden">
 
-  <nav>
-    <a href="/about">
-      About
-    </a>
-    <span> | </span>
-    <a href="/posts">
-      Posts
-    </a>
-  </nav>
+  <p class="centered">
+    I live in Brooklyn and write software.
+  </p>
+  <p class="centered">
+    <span>Check out my</span>
+    <a target='_blank'
+       href='https://github.com/chancock09'
+       rel="noopener">
+      Github</a>
+    <a target='_blank'
+       href='https://www.linkedin.com/in/chancock09'
+       rel="noopener">
+      LinkedIn</a>
+    <span>
+      and
+    </span>
+    <a target='_blank'
+       href='https://github.com/chancock09/resume/files/520574/resume.pdf'
+       rel="noopener">
+      Resume</a>.
+  </p>
 </article>
+
