--- a/posts.html
+++ b/posts.html
@@ -1,13 +1,16 @@
 ---
-layout: page
+layout: default
 title: Posts
 ---
 
-<ul>
+<article>
   {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
-    </li>
+    <section>
+      <h2>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+      </h2>
+
+      {{ post.content }}
+    </section>
   {% endfor %}
-</ul>
+</article>
