--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
        class="img--hidden">
 
   <p class="centered">
-    I live in Brooklyn and write software.
+    I build beautiful websites from Brooklyn, NY.
   </p>
   <p class="centered">
     <span>Check out my</span>
