--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="centered">
   <h1>
-    Hi, I'm <a onclick="toggleImage()" class="nav-link nav-link--main">Chris Hancock</a>.
+    Hi, I'm <a onclick="toggleImage()" class="nav-link nav-link--main">Chris Hancock</a>
   </h1>
 
   <img id="me"
