--- a/posts.html
+++ b/posts.html
@@ -6,11 +6,13 @@ title: Posts
 <article>
   {% for post in site.posts %}
     <section>
+      <span>{{ post.date | date_to_string }}</span>
       <h2>
         <a href="{{ post.url }}">{{ post.title }}</a>
       </h2>
 
-      {{ post.content }}
+      <span>
+      </span>
     </section>
 
     <br/>
