--- a/pages.html
+++ b/pages.html
@@ -1,14 +1,13 @@
 ---
 layout: default
-title: Posts
 ---
 
 <article>
-  {% for post in site.posts %}
+  {% for page in site.pages %}
     <section>
-      <span>{{ post.date | date_to_string }}</span>
+      <span>{{ page.date | date_to_string }}</span>
       <h2>
-        <a href="{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ page.url }}">{{ page.title }}</a>
       </h2>
 
       <span>
