--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 
   <img id="me"
        src="assets/images/me.jpg"
-       class="img--hidden">
+       class="img img--hidden">
 
   <p class="centered">
     I build beautiful websites from Brooklyn, NY.
