--- a/404.html
+++ b/404.html
@@ -3,6 +3,8 @@ layout: default
 permalink: /404.html
 ---
 
-<p>Sorry, this page doesn't exist :(</p>
+<article class="home">
+  <h1 class="centered">Sorry, this page doesn't exist :(</h1>
 
-<p class="centered"><a href="/">Go home</a>.</p>
+  <p class="centered"><a href="/">Go home</a>.</p>
+</article>
