--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<article class="centered">
-  <h1>
-    Hi, I'm <a onclick="toggleImage()" class="nav-link nav-link--main">Chris Hancock</a>
+<article class="home">
+  <h1 class="centered">
+    Hi, I'm <a onclick="toggleImage()" class="link--main">Chris Hancock</a>
   </h1>
 
   <img id="me"
