--- a/pages.html
+++ b/pages.html
@@ -2,22 +2,14 @@
 layout: default
 ---
 
-<article>
+<article class="pages">
 
-  <h1> Pages </h1>
+  <h1 class="pages__header"> Pages </h1>
 
   {% for page in site.pages reversed %}
-    <section>
-      <span>{{ page.date | date_to_string }}</span>
-      <div class="pages-link">
-        <a href="{{ page.url }}">{{ page.title }}</a>
-      </div class="pages-link">
-
-      <span>
-      </span>
+    <section class="pages__section">
+      <div class="pages__meta">{{ page.date | date: '%b %d, %Y' }}</div>
+      <a href="{{ page.url }}">{{ page.title }}</a>
     </section>
-
-    <br/>
-
   {% endfor %}
 </article>
