more good looking

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@ layout: default
   </p>
   <p class="centered">
     <span>Check out my</span>
-    <a target='_blank'
-       href='https://github.com/chancock09'
+    <a target="_blank"
+       href="/pages"
+       rel="noopener">
+      Pages</a>
+    <a target="_blank"
+       href="https://github.com/chancock09"
        rel="noopener">
       Github</a>
-    <a target='_blank'
-       href='https://www.linkedin.com/in/chancock09'
-       rel="noopener">
-      LinkedIn</a>
     <span>
       and
     </span>
-    <a target='_blank'
-       href='https://github.com/chancock09/resume/files/520574/resume.pdf'
+    <a target="_blank"
+       href="https://github.com/chancock09/resume/files/520574/resume.pdf"
        rel="noopener">
       Resume</a>.
   </p>
